--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>猫額</title>
-        <link rel="stylesheet" href="paralysis23.github.io/theme/css/main.css" />
-        <link href="paralysis23.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="猫額 Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="猫額 Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,9 +13,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="paralysis23.github.io/">猫額 </a></h1>
+                <h1><a href="/">猫額 </a></h1>
                 <nav><ul>
-                    <li><a href="paralysis23.github.io/category/pelican.html">Pelican</a></li>
+                    <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -23,7 +23,7 @@
 
 <dl>
     <dt>金 09 11月 2018</dt>
-    <dd><a href="paralysis23.github.io/test01.html">テスト投稿</a></dd>
+    <dd><a href="/test01.html">テスト投稿</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -39,7 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="paralysis23.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
