--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>猫額 - Tags</title>
-        <link rel="stylesheet" href="paralysis23.github.io/theme/css/main.css" />
-        <link href="paralysis23.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="猫額 Atom Feed" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="猫額 Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,17 +13,17 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="paralysis23.github.io/">猫額 </a></h1>
+                <h1><a href="/">猫額 </a></h1>
                 <nav><ul>
-                    <li><a href="paralysis23.github.io/category/pelican.html">Pelican</a></li>
+                    <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for 猫額</h1>
     <ul>
-        <li><a href="paralysis23.github.io/tag/pelican.html">pelican</a> (1)</li>
-        <li><a href="paralysis23.github.io/tag/python.html">python</a> (1)</li>
+        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="/tag/python.html">python</a> (1)</li>
     </ul>
 </section>
 
@@ -40,7 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="paralysis23.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
