--- a/tags.html
+++ b/tags.html
@@ -107,7 +107,12 @@
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
                         <div class="about-me">
-                            <div class="small-12 columns text-justify">
+                            <div class="hide-for-medium-only small-3 columns no-buffer">
+                                <a class="th" href="C:/Users/tarar/githubpages/content/images/profileimage.jpg">
+                                    <img src="C:/Users/tarar/githubpages/content/images/profileimage.jpg">
+                                </a>
+                            </div>
+                            <div class="small-9 medium-12 large-9 columns text-justify">
                                 
                             </div>
                             <div class="small-12 columns">
