--- a/tags.html
+++ b/tags.html
@@ -102,7 +102,7 @@
 </div>                </footer>
             </div>
             
-            <div class="image-pane main-content" style="background: url('images/profileimage.jpg'); background-size:cover; background-position: right;">
+            <div class="image-pane main-content" style="background: url('images/backdrop.jpg'); background-size:cover; background-position: right;">
                 <div class="row">
                     <div class="small-12 medium-4 large-12 columns">
                         <h5 class='text-center'>About</h5>
@@ -112,8 +112,7 @@
                             </div>
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
-                                    <li><a href="#"><i class="fa fa-you can add links in your config file"></i>&nbsp; You can add links in your config file</a></li>
-                                    <li><a href="#"><i class="fa fa-another social link"></i>&nbsp; Another social link</a></li>
+                                    <li><a href="https://github.com/paralysis23"><i class="fa fa-github"></i>&nbsp; github</a></li>
                                 </ul>
                             </div>
                         </div>
