--- a/categories.html
+++ b/categories.html
@@ -129,6 +129,7 @@
                             <div class="small-12 columns">
                                 <ul class="inline-center social-list">
                                     <li><a href="https://github.com/paralysis23"><i class="fa fa-github"></i>&nbsp; github</a></li>
+                                    <li><a href="https://twitter.com/tarariko"><i class="fa fa-twitter"></i>&nbsp; twitter</a></li>
                                 </ul>
                             </div>
                         </div>
